--- a/code/figure4.Rmd
+++ b/code/figure4.Rmd
@@ -1,19 +1,6 @@
 ```{r forest-heatmap-data-generation, eval = FALSE}
-# rm(list = ls())
-# gc()
-# setwd("/data/GDC_TCGA/TTmanu/wd/")
+load("../data/kelly.colours.rda")
 
-library(maftools)
-library(TCGAbiolinks)
-library(tidyverse)
-library(survival)
-
-kelly.colours <- c(
-  "gray95", "gray13", "gold2", "plum4", "darkorange1",
-  "lightskyblue2", "firebrick", "burlywood3", "gray51", "springgreen4",
-  "lightpink2", "deepskyblue4", "lightsalmon2", "mediumpurple4",
-  "orange", "maroon", "yellow3", "brown4", "yellow4", "sienna4", "chocolate", "gray19"
-)
 cluster.colors <- kelly.colours[-c(1)]
 names(cluster.colors) <- 0:20
 cluster_colors <- cluster.colors[2:11]
